# identity-service

./: .gitignore  Cargo.toml  README.md  compose.yaml
.github/workflows/: rust.yml
docker/postgres/: schema.sql
docker/prometheus/: Dockerfile  prometheus.yaml  prometheus.yml
src/: api.rs  apis.rs  error.rs  errors.rs  main.rs  services.rs  stores.rs
src/api/: converters.rs  error.rs  errors.rs  mod.rs  models.rs  rest.rs
src/apis/: converters.rs  error.rs  models.rs  rest.rs
src/services/: account.rs  accounts.rs
src/services/account/: error.rs  id.rs  models.rs  store.rs  stores.rs
src/services/account/store/: error.rs  fake.rs  postgres.rs
src/services/account/stores/: error.rs
src/services/accounts/: errors.rs  mod.rs  models.rs  stores.rs
src/services/accounts/stores/: error.rs  fake.rs  postgres.rs
src/stores/: errors.rs  fake.rs  mod.rs  postgres.rs
