[package]
name = "identity-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
axum = { version = "0.7.5", features= ["http2"] }
dotenvy = "0.15.7"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tracing-core = "0.1.32"