[package]
name = "identity-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
axum = { version = "0.7.5", features = ["http2", "macros"] }
dotenvy = "0.15.7"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tracing-core = "0.1.32"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono"] }
argon2 = { version = "0.5.3", features = ["password-hash"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
secrecy = { version = "0.8.0", features = ["serde"] }
validify = "1.4.0"
axum-prometheus = "0.6.1"

[dev-dependencies]
http-body-util = "0.1.1"
axum-test = "15.0.1"
